codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__placeholder_session_info_open_interpreter_uses_immediate_tip_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭──────────────────────────────────────────────╮
│ • Open Interpreter (v0.0.0)                  │
│                                              │
│ model:     gpt-5.4 medium   /model to change │
│ directory: /tmp/project                      │
╰──────────────────────────────────────────────╯

  Tip: Use /model to switch providers, models, or reasoning effort.
