codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__session_header_snapshot_uses_open_interpreter_branding.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭──────────────────────────────────────────────────╮
│ • Open Interpreter (vtest)                       │
│                                                  │
│ model:     gpt-4o high   fast   /model to change │
│ directory: /tmp/project                          │
╰──────────────────────────────────────────────────╯
