codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__session_info_first_event_uses_open_interpreter_branding_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3232
expression: rendered
---
╭─────────────────────────────────────╮
│ • Open Interpreter (v0.0.0)         │
│                                     │
│ model:     gpt-5   /model to change │
│ directory: /tmp/project             │
╰─────────────────────────────────────╯

  Tip: Use /model to switch providers, models, or reasoning effort.
